prettier: fix _pomodoro_app

--- a/apps/_pomodoro_app/styles/global.less
+++ b/apps/_pomodoro_app/styles/global.less
@@ -4,7 +4,7 @@
 
 // Ant customization
 // https://ant.design/docs/react/customize-theme
-@primary-color: #C02428;
+@primary-color: #c02428;
 
 .HomePage {
   margin: 20px;
