feat(pass): DOMA-10773 update message templates

--- a/apps/condo/lang/ru/messages/PASS_TICKET_CREATED/default.njk
+++ b/apps/condo/lang/ru/messages/PASS_TICKET_CREATED/default.njk
@@ -1,5 +1,5 @@
 {%- if message.meta.data.guestName -%}
-Гость {{ message.meta.data.guestName }} придет {{ message.meta.data.openAt }}
+{{ message.meta.data.guestName }} придет {{ message.meta.data.openAt }}
 {%- else -%}
 {{ message.meta.data.vehicleBrand }}, {{ message.meta.data.stateVehicleNumber }} приедет {{ message.meta.data.openAt }}
 {% endif %}
