feat(condo): DOMA-10687 added usePollUserMessages hook

--- a/apps/condo/lang/en/messages/TICKET_COMMENT_CREATED/default.njk
+++ b/apps/condo/lang/en/messages/TICKET_COMMENT_CREATED/default.njk
@@ -1,2 +1,1 @@
-There is a new comment!
-Please follow the link to view the ticket: {{ message.meta.data.url }}
+{{ message.meta.data.commentContent }}
