--- a/apps/condo/lang/en/messages/TICKET_CREATED/default.njk
+++ b/apps/condo/lang/en/messages/TICKET_CREATED/default.njk
@@ -1,2 +1,1 @@
-New ticket created №{{ message.meta.data.ticketNumber }}
-Link to ticket: {{ message.meta.data.url }}
+{{ message.meta.data.ticketDetails }}
