--- a/apps/condo/lang/es/messages/TICKET_COMMENT_CREATED/default.njk
+++ b/apps/condo/lang/es/messages/TICKET_COMMENT_CREATED/default.njk
@@ -1,1 +1,1 @@
-{{ message.meta.data.commentContent }}
+{{ message.meta.data.authorName }} ({{ message.meta.data.authorType }}): {{ message.meta.data.commentContent }}
