fix(condo): DOMA-9722 fixed typography color
fix(condo): DOMA-9722 fixed border-radius

fix(condo): DOMA-9722 fixed styles for FormItem

chore(ui): DOMA-9722 deprecated PhoneInput

fix(ui): DOMA-9722 added CookieAgreement to /auth page

chore(ui): DOMA-9722 updated schema

fix(ui): DOMA-9722 fixed styles for Input.Phone

fix(condo): DOMA-9722 fixed error mapping

fix(condo): DOMA-9722 removed password creating when invite new organization employee

refactor(condo): DOMA-9722 refactored regex

fix(condo): DOMA-9722 fixed link in messages

feat(condo): DOMA-9722 added link to telegram bot

feat(condo): DOMA-9722 added links for resident app

fix(condo): DOMA-9722 fixed after review

fix(condo): DOMA-9722 fixed after review by sonar

fix(condo): DOMA-9722 updated condition

fix(condo): DOMA-9722 fixed styles

feat(condo): DOMA-9722 updated schema

feat(condo): DOMA-9722 removed sms after user registration

feat(condo): DOMA-9722 added redirects if no resident app. Fixed styles

feat(condo): DOMA-9722 added images and translations

feat(condo): DOMA-9722 updated layout with poster

feat(condo): DOMA-9722 added translation

feat(condo): DOMA-9722 added display of QR code. Refactored styles

fix(condo): DOMA-9722 fixed redirects to auth

feat(condo): DOMA-9722 remove credentials from messages

feat(condo): DOMA-9722 added redirects for auth pages

chore(condo): DOMA-9722 removed unused code

fix(condo): DOMA-9722 fixed imports

feat(condo): DOMA-9722 new auth pages

feat(condo): DOMA-9722 show errors in form via useMutationErrorHandler

chore(condo): DOMA-9722 removed todo

feat(condo): DOMA-9722 added errorMapping to AuthenticateOrRegisterUserWithTokenService

feat(condo): DOMA-9722 fixed error mapping for keystone errors (for backward compatibility)

feat(condo): DOMA-9722 add size for Space

refactor(condo): DOMA-9722 added types

fix(condo): DOMA-9722 fixed captcha when it disabled

--- a/packages/ui/src/components/Input/style.less
+++ b/packages/ui/src/components/Input/style.less
@@ -57,7 +57,7 @@
   box-shadow: none;
 }
 
-.condo-input-phone .flag-dropdown {
+.condo-input-phone div.flag-dropdown {
   margin: @condo-global-spacing-4;
   background: @condo-global-color-gray-3;
   border: 0;
