--- a/apps/condo/lang/en/messages/DIRTY_INVITE_NEW_EMPLOYEE_SMS/default.njk
+++ b/apps/condo/lang/en/messages/DIRTY_INVITE_NEW_EMPLOYEE_SMS/default.njk
@@ -1,1 +1,1 @@
-"{{ message.meta.organizationName }}" invites you to Doma: {{ message.meta.serverUrl }}
+"{{ message.meta.organizationName }}" invites you to Doma: {{ message.meta.serverUrl }}{% if message.meta.isRegistration %}/auth/register{% else %}/{% endif %}
