--- a/apps/condo/lang/ru/messages/DIRTY_INVITE_NEW_EMPLOYEE_EMAIL/default.njk
+++ b/apps/condo/lang/ru/messages/DIRTY_INVITE_NEW_EMPLOYEE_EMAIL/default.njk
@@ -1,1 +1,1 @@
-"{{ message.meta.organizationName }}" приглашает в Дома: {{ message.meta.serverUrl }}
+"{{ message.meta.organizationName }}" приглашает в Дома: {{ message.meta.serverUrl }}{% if message.meta.isRegistration %}/auth/register{% else %}/{% endif %}
