feat(condo): DOMA-10771 notifications in platform (#5796)
* feat(icons): DOMA-10771 add Bell icon

* feat(icons): DOMA-10771 add NotificationCounter component

* feat(condo): DOMA-10771 fix TopMenuItems spacing on large screens

* feat(condo): DOMA-10771 added base dropdown

* feat(condo): DOMA-10771 change bage to antd component, close dropdown when modal opens

* feat(condo): DOMA-10771 added localStorage logic

* feat(condo): DOMA-10771 added get user messages count query

* fix(condo): DOMA-10771 added as const to array to fix ts issue

* feat(condo): DOMA-10687 added usePollUserMessages hook

* feat(condo): DOMA-10687 added localStorage manager

* feat(condo): DOMA-10687 added infinity scroll

* feat(condo): DOMA-10687 title links temp

* fix(condo): DOMA-10771 fixes in infinity scroll and refetch messages

* fix(condo): DOMA-10771 remove scrolled messages when close dropdown

* feat(condo): DOMA-10771 mobile dropdown overlay

* feat(condo): DOMA-10771 move polling logic to context

* feat(condo): DOMA-10771 show b2b app message type checkbox only if employee has b2bapprole

* feat(condo): DOMA-10771 added Switch to modal, do some fixed

* feat(condo): DOMA-10771 play audio on new message

* chore(condo): DOMA-10771 update submodules

* fix(condo): DOMA-10771 fixes after self review

* feat(condo): DOMA-10771 added useNewMessageTitleNotification hook

* feat(condo): DOMA-10771 added analytics events

* feat(condo): DOMA-10771 added feature flag

* feat(condo): DOMA-10771 added authorName and authorType to ticket comment message

* fix(condo): DOMA-10771 made bell icon middle to select chevron

* fix(condo): DOMA-10771 some design fixes

* fix(condo): DOMA-10771 set selected message types state when toggling switch

* feat(condo): DOMA-10771 added meta.data.url check in sendB2BAppPushMessageService

* refactor(condo): DOMA-10771 add types to components

* fix(condo): DOMA-10771 remove window undefined check

* fix(condo): DOMA-10771 memo messageTypesToFilter arr

--- a/apps/condo/lang/es/messages/TICKET_COMMENT_CREATED/default.njk
+++ b/apps/condo/lang/es/messages/TICKET_COMMENT_CREATED/default.njk
@@ -1,2 +1,1 @@
-¡Tiene un nuevo comentario!
-Puede ver la solicitud siguiendo este enlace: {{ message.meta.data.url }}
+{{ message.meta.data.authorName }} ({{ message.meta.data.authorType }}): {{ message.meta.data.commentContent }}
