--- a/apps/condo/domains/common/components/containers/global-styles.css
+++ b/apps/condo/domains/common/components/containers/global-styles.css
@@ -130,6 +130,7 @@
 .mobile-header .context-bar {
   display: flex;
   flex-direction: row;
+  gap: 60px;
   align-items: center;
   justify-content: space-between;
   height: 40px;
@@ -155,6 +156,11 @@
   vertical-align: bottom;
 }
 
+.mobile-header .organization-user-block {
+  display: flex;
+  gap: 20px;
+}
+
 .user-dropdown {
   cursor: pointer;
 }
@@ -175,6 +181,10 @@
 .appeals-dropdown-menu .condo-typography,
 .menu .menu-item .condo-typography {
   color: inherit;
+}
+
+.mobile-header .organization-user-block .organization-selector .condo-typography {
+  max-width: 100px;
 }
 
 .appeals-button {
