--- a/apps/condo/lang/ru/messages/PASS_TICKET_CREATED/default.njk
+++ b/apps/condo/lang/ru/messages/PASS_TICKET_CREATED/default.njk
@@ -1,5 +1,9 @@
 {%- if message.meta.data.guestName -%}
 {{ message.meta.data.guestName }} придет {{ message.meta.data.openAt }}
 {%- else -%}
-{{ message.meta.data.vehicleBrand }}, {{ message.meta.data.stateVehicleNumber }} приедет {{ message.meta.data.openAt }}
+    {%- if message.meta.data.vehicleBrand -%}
+    {{ message.meta.data.vehicleBrand }}, {{ message.meta.data.stateVehicleNumber }} приедет {{ message.meta.data.openAt }}
+    {%- else -%}
+    {{ message.meta.data.stateVehicleNumber }} приедет {{ message.meta.data.openAt }}
+    {% endif %}
 {% endif %}
