fix(condo): DOMA-11171 fix message displaying

--- a/apps/condo/domains/notification/components/UserMessagesList/MessageCard/MessageCard.css
+++ b/apps/condo/domains/notification/components/UserMessagesList/MessageCard/MessageCard.css
@@ -2,6 +2,10 @@
   opacity: 0.5;
 }
 
+.condo-card.message-card {
+  height: fit-content;
+}
+
 .message-card .message-card-title {
   display: flex;
   justify-content: space-between;
