--- a/apps/condo/lang/ru/messages/TICKET_COMMENT_CREATED/default.njk
+++ b/apps/condo/lang/ru/messages/TICKET_COMMENT_CREATED/default.njk
@@ -1,5 +1,5 @@
 {%- if message.meta.data.authorName -%}
-{{ message.meta.data.authorName }} ({{ message.meta.data.authorType }}): {{ message.meta.data.commentContent }}
+{{ message.meta.data.authorName }}, {{ message.meta.data.authorType }}: {{ message.meta.data.commentContent }}
 {%- else -%}
 {{ message.meta.data.commentContent }}
 {% endif %}
