--- a/apps/condo/domains/user/components/auth/SecondaryLink.css
+++ b/apps/condo/domains/user/components/auth/SecondaryLink.css
@@ -3,7 +3,8 @@
   text-decoration-color: #707695;
 }
 
-.secondary-link a.condo-typography:hover {
+.secondary-link a.condo-typography:hover,
+.secondary-link a.condo-typography:focus {
   color: #2bc359;
   text-decoration-color: #2bc359;
 }
