fix(ui): DOMA-9723 fix alert content flex

--- a/packages/ui/src/components/Alert/style.less
+++ b/packages/ui/src/components/Alert/style.less
@@ -51,8 +51,8 @@
     & {
       flex-wrap: wrap;
 
-      & .condo-alert-content {
-        flex: 1 0 auto;
+      &.condo-alert-no-icon .condo-alert-content {
+        flex: unset;
       }
 
       & .condo-alert-action {
