--- a/apps/condo/lang/en/messages/BILLING_RECEIPT_INSURANCE_CATEGORY/default.njk
+++ b/apps/condo/lang/en/messages/BILLING_RECEIPT_INSURANCE_CATEGORY/default.njk
@@ -1,9 +1,1 @@
-In the resident's app, a receipt for property insurance is available.
-
-
-
-
-
-
-
-
+In the resident's app, a receipt for property insurance is available
