--- a/apps/condo/lang/es/messages/BILLING_RECEIPT_INSURANCE_CATEGORY/push.njk
+++ b/apps/condo/lang/es/messages/BILLING_RECEIPT_INSURANCE_CATEGORY/push.njk
@@ -1,1 +1,1 @@
-En la aplicación del residente, está disponible un recibo para el seguro de propiedad.
+En la aplicación del residente, está disponible un recibo para el seguro de propiedad
