chore(dev-portal-web): DOMA-11450 add responsive

--- a/apps/dev-portal-web/domains/docs/components/widgets/AmountDistributionCalculator/index.module.css
+++ b/apps/dev-portal-web/domains/docs/components/widgets/AmountDistributionCalculator/index.module.css
@@ -1,4 +1,6 @@
-.new-recipient-button {
-  width: 100%;
-  height: 64px;
+.new-recipient-card-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 0
 }
