feat(condo): DOMA-9723 new organization creation (#5952)
* feat(condo): DOMA-9723 initial invite state

* feat(condo): DOMA-9723 check employee existence

* feat(condo): DOMA-9723 added cancel button

* feat(condo): DOMA-9723 base organization creation screens

* feat(condo): DOMA-9723 update invite notification banner

* feat(condo): DOMA-9723 temp banner alert ui

* feat(condo): DOMA-9723 create organization modal

* feat(condo): DOMA-9723 temp added fields in OrganizationEmployeeRequest

* feat(condo): DOMA-9723 added organization request banner

* feat(ui): DOMA-9723 added action to alert

* chore(condo): DOMA-9723 fixes after rebase

* fix(condo): DOMA-9723 fix requset notification remove

* fix(condo): DOMA-9723 fix organization modal blink after organization creation

* fix(ui): DOMA-9723 fix alert content flex

* fix(condo): DOMA-9723 added translations

* fix(condo): DOMA-9723 added useGetOrganizationEmployeeExistenceQuery query

* fix(condo): DOMA-9723 fixes after review

* refactor(condo): DOMA-9723 remove unnecessary query

* refactor(condo): DOMA-9723 move logic to separate page

* feat(condo): DOMA-9723 pass nextUrl in redirects

* refactor(condo): DOMA-9723 remove css files

* feat(condo): DOMA-9723 added translations to errors

* refactor(condo): DOMA-9723 update schema

* fix(condo): DOMA-9723 filter requests by user organizations

* refactor(condo): DOMA-9723 some fixes after review

* refactor(condo): DOMA-9723 update migration

* refactor(condo): DOMA-9723 refactor after review

* fix(condo): DOMA-11318 clear notifications if user does not exist

* refactor(condo): DOMA-9723 remove skipUserPrefetch check in prefetchOrganizationEmployee logic

* fix(condo): DOMA-9723 fix bug with refetch employee

* fix(condo): DOMA-9723 fix cases when user not redirected to platform

* fix(condo): DOMA-9723 fix organization form witdh and added messageForUser for invalid organization name error

* feat(condo): DOMA-9723 rebase,  recreate migration

* fix(condo): 

--- a/packages/ui/src/components/Alert/style.less
+++ b/packages/ui/src/components/Alert/style.less
@@ -11,6 +11,9 @@
 @alert-warning-icon-color: @condo-global-color-orange-5;
 @alert-error-bg-color: @condo-global-color-red-1;
 @alert-error-icon-color: @condo-global-color-red-5;
+@alert-icon-size: @condo-global-spacing-24;
+@alert-icon-space-right: @condo-global-spacing-12;
+@alert-actions-space-left: @alert-icon-size + @alert-icon-space-right;
 
 .condo-alert {
   &-description {
@@ -36,5 +39,31 @@
     .condo-typography-h4();
 
     margin-bottom: @condo-global-spacing-4;
+  }
+
+  & .condo-alert-icon {
+    width: @alert-icon-size;
+    height: @alert-icon-size;
+    margin-right: @alert-icon-space-right;
+  }
+
+  @media @from-mobile-small and @to-tablet-small {
+    & {
+      flex-wrap: wrap;
+
+      &.condo-alert-no-icon .condo-alert-content {
+        flex: unset;
+      }
+
+      & .condo-alert-action {
+        width: 100%;
+        margin-top: @condo-global-spacing-24;
+        margin-left: 0;
+      }
+
+      & > .condo-alert-icon ~ .condo-alert-action {
+        margin-left: @alert-actions-space-left;
+      }
+    }
   }
 }
