--- a/packages/ui/src/components/Tabs/style.less
+++ b/packages/ui/src/components/Tabs/style.less
@@ -53,6 +53,9 @@
 
   & > .condo-tabs-nav,
   & > div > .condo-tabs-nav {
+    flex-wrap: wrap;
+    gap: @condo-global-spacing-24;
+
     .condo-tabs-nav-wrap::before {
       width: @condo-global-spacing-40;
       box-shadow:
