fix (condo): fix focus-visible for dangerous

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -398,6 +398,10 @@
       .condo-btn-content-color(@condo-global-color-red-5);
       .condo-btn-static-text-color(@condo-global-color-red-5);
 
+      &::before {
+        background: @condo-global-color-red-5 border-box;
+      }
+
       &:hover {
         .condo-btn-content-color(@condo-global-color-red-7);
         .condo-btn-static-text-color(@condo-global-color-red-7);
