--- a/packages/ui/src/components/Banner/style.less
+++ b/packages/ui/src/components/Banner/style.less
@@ -13,6 +13,8 @@
 
   &-image-container,
   &-content-container {
+    display: flex;
+    justify-content: center;
     box-sizing: border-box;
     width: 50%;
     height: 100%;
@@ -87,7 +89,7 @@
   }
 
   &:not(.condo-promo-block-no-image) .condo-promo-block-text-container {
-    max-width: 420px;
+    max-width: 480px;
   }
 
   &-action-link {
