--- a/packages/ui/src/components/Banner/style.less
+++ b/packages/ui/src/components/Banner/style.less
@@ -108,7 +108,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: right center;
+      object-position: center;
       user-select: none;
       -webkit-user-drag: none;
     }
