--- a/apps/condo/domains/ai/components/AIFlowButton.css
+++ b/apps/condo/domains/ai/components/AIFlowButton.css
@@ -21,3 +21,7 @@
   outline: 2px solid var(--condo-global-color-green-5);
   outline-offset: 2px;
 }
+
+button.condo-btn.condo-btn-default.condo-btn-loading.condo-btn-secondary.ai-flow-button .condo-btn-loading-icon {
+  width: 16px;
+}
