fix(ui): DOMA-11759 fix styles

--- a/packages/ui/src/components/Input/textArea/textArea.less
+++ b/packages/ui/src/components/Input/textArea/textArea.less
@@ -8,7 +8,7 @@
   }
 
   &.condo-input-show-bottom-panel {
-    padding-bottom: @condo-global-spacing-40;
+    padding-bottom: @condo-global-spacing-60;
   }
 }
 
@@ -35,15 +35,15 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   width: calc(100% - @condo-global-spacing-12 * 2);
-  max-height: @condo-global-spacing-40 - @condo-global-border-width-default;
-  padding-bottom: @condo-global-spacing-12 - @condo-global-border-width-default;
+  max-height: @condo-global-spacing-52 - @condo-global-border-width-default;
+  padding: @condo-global-spacing-8 0 @condo-global-spacing-12;
   background-color: @condo-global-color-white;
 
   &-right {
     display: flex;
     gap: @condo-global-spacing-16;
     align-items: center;
+    margin-left: auto;
   }
 }
