fix(ui): DOMA-11759 fix styles and stories

--- a/packages/ui/src/components/Input/textArea/textArea.less
+++ b/packages/ui/src/components/Input/textArea/textArea.less
@@ -30,7 +30,7 @@
 
 .condo-input-bottom-panel {
   position: absolute;
-  bottom: @condo-global-border-width-default;
+  bottom: @condo-global-border-width-default * 2;
   left: @condo-global-spacing-12;
   display: flex;
   flex-direction: row;
