--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -3,42 +3,21 @@
 @import (reference) "@open-condo/ui/src/components/style/mixins/typography";
 @import (reference) "@open-condo/ui/src/components/style/mixins/button";
 
-@condo-button-padding-height-large: @condo-global-spacing-48;
-@condo-button-padding-hor-large: @condo-global-spacing-20;
-@condo-button-padding-height-medium: @condo-global-spacing-32;
-@condo-button-padding-hor-medium: @condo-global-spacing-12;
+@condo-button-padding-vert-l: @condo-global-spacing-12;
+@condo-button-padding-hor-l: @condo-global-spacing-20;
+@condo-button-padding-vert-m: @condo-global-spacing-4 + 1px;
+@condo-button-padding-hor-m: @condo-global-spacing-12;
 
-@condo-button-padding-height-large-compact: @condo-global-spacing-24;
-@condo-button-padding-height-medium-compact: @condo-global-spacing-20;
+@condo-button-padding-vert-compact: @condo-global-spacing-4;
 @condo-button-padding-hor-compact: @condo-global-spacing-4;
 
 @condo-button-border-width: @condo-global-border-width-default;
-@condo-button-line-height-large: @condo-global-typography-h4-line-height;
-@condo-button-line-height-medium: @condo-global-typography-h6-line-height;
+@condo-button-line-height-l: @condo-global-typography-h4-line-height;
+@condo-button-line-height-m: @condo-global-typography-h5-line-height;
 
 @condo-button-focus-outline-width: @condo-global-border-width-default * 4;
 @condo-button-border-radius: @condo-global-border-radius-medium;
-@condo-button-gap-medium: @condo-global-spacing-4;
-@condo-button-gap-large: @condo-global-spacing-8;
-
-.minimal-styles() {
-  text-shadow: none;
-  background: none;
-  border-color: transparent;
-  box-shadow: none;
-
-  &::before {
-    display: none;
-  }
-
-  &::after {
-    opacity: 0;
-  }
-
-  &:focus-visible::after {
-    opacity: 1;
-  }
-}
+@condo-button-gap: @condo-global-spacing-8;
 
 .condo-btn {
   .condo-typography-h4();
@@ -52,141 +31,87 @@
   box-shadow: none;
   transition: none;
 
-  span {
-    position: relative;
-    z-index: 1;
-  }
-
-  &-medium {
+  &-M {
     min-width: @condo-global-spacing-32;
     .condo-typography-h5();
-
-    span + span {
-      margin-left: @condo-button-gap-medium;
-    }
   }
 
-  &-large {
+  &-L {
     min-width: @condo-global-spacing-48;
     .condo-typography-h4();
-
-    span + span {
-      margin-left: @condo-button-gap-large;
-    }
   }
 
-  &-medium.condo-btn-primary {
-    .condo-btn(@condo-button-line-height-medium, @condo-button-padding-height-medium,
-    @condo-button-padding-hor-medium, 0);
+  &-M.condo-btn-primary {
+    .condo-btn(@condo-button-line-height-m, @condo-button-padding-vert-m, @condo-button-padding-hor-m, 0);
   }
 
-  &-medium.condo-btn-secondary,
-  &-medium.condo-btn-accent {
-    .condo-btn(@condo-button-line-height-medium, @condo-button-padding-height-medium,
-    @condo-button-padding-hor-medium, @condo-button-border-width);
+  &-M.condo-btn-secondary,
+  &-M.condo-btn-accent {
+    .condo-btn(@condo-button-line-height-m, @condo-button-padding-vert-m,
+    @condo-button-padding-hor-m, @condo-button-border-width);
   }
 
-  &-large.condo-btn-primary {
-    .condo-btn(@condo-button-line-height-large, @condo-button-padding-height-large, @condo-button-padding-hor-large, 0);
+  &-L.condo-btn-primary {
+    .condo-btn(@condo-button-line-height-l, @condo-button-padding-vert-l, @condo-button-padding-hor-l, 0);
   }
 
-  &-large.condo-btn-secondary,
-  &-large.condo-btn-accent {
-    .condo-btn(@condo-button-line-height-large, @condo-button-padding-height-large,
-    @condo-button-padding-hor-large, @condo-button-border-width);
+  &-L.condo-btn-secondary,
+  &-L.condo-btn-accent {
+    .condo-btn(@condo-button-line-height-l, @condo-button-padding-vert-l,
+    @condo-button-padding-hor-l, @condo-button-border-width);
   }
 
-  &-medium.condo-btn-compact.condo-btn-primary {
+  &-M.condo-btn-compact.condo-btn-primary {
     min-width: 0;
-    .condo-btn(@condo-button-line-height-medium, @condo-button-padding-height-medium-compact,
-    @condo-button-padding-hor-compact, 0);
+    .condo-btn(@condo-button-line-height-m, @condo-button-padding-vert-compact, @condo-button-padding-hor-compact, 0);
   }
 
-  &-medium.condo-btn-compact.condo-btn-secondary,
-  &-medium.condo-btn-compact.condo-btn-accent {
+  &-M.condo-btn-compact.condo-btn-secondary,
+  &-M.condo-btn-compact.condo-btn-accent {
     min-width: 0;
-    .condo-btn(@condo-button-line-height-medium, @condo-button-padding-height-medium-compact,
+    .condo-btn(@condo-button-line-height-m, @condo-button-padding-vert-compact,
     @condo-button-padding-hor-compact, @condo-button-border-width);
   }
 
-  &-large.condo-btn-compact.condo-btn-primary {
+  &-L.condo-btn-compact.condo-btn-primary {
     min-width: 0;
-    .condo-btn(@condo-button-line-height-large, @condo-button-padding-height-large-compact,
-    @condo-button-padding-hor-compact, 0);
+    .condo-btn(@condo-button-line-height-l, @condo-button-padding-vert-compact, @condo-button-padding-hor-compact, 0);
   }
 
-  &-large.condo-btn-compact.condo-btn-secondary,
-  &-large.condo-btn-compact.condo-btn-accent {
+  &-L.condo-btn-compact.condo-btn-secondary,
+  &-L.condo-btn-compact.condo-btn-accent {
     min-width: 0;
-    .condo-btn(@condo-button-line-height-large, @condo-button-padding-height-large-compact,
+    .condo-btn(@condo-button-line-height-l, @condo-button-padding-vert-compact,
     @condo-button-padding-hor-compact, @condo-button-border-width);
-  }
-
-  &-medium.condo-btn-compact.condo-btn-icon-only {
-    width: @condo-global-spacing-20;
-    height: @condo-global-spacing-20;
-  }
-
-  &-large.condo-btn-compact.condo-btn-icon-only {
-    width: @condo-global-spacing-24;
-    height: @condo-global-spacing-24;
   }
 
   &-minimal.condo-btn-primary,
   &-minimal.condo-btn-secondary,
   &-minimal.condo-btn-accent,
-  &-minimal.condo-btn-primary.condo-btn-stateless:not(:disabled),
-  &-minimal.condo-btn-secondary.condo-btn-stateless:not(:disabled),
-  &-minimal.condo-btn-accent.condo-btn-stateless:not(:disabled),
   &-minimal.condo-btn-primary.condo-btn-dangerous,
   &-minimal.condo-btn-secondary.condo-btn-dangerous,
   &-minimal.condo-btn-accent.condo-btn-dangerous {
-    .minimal-styles;
+    text-shadow: none;
+    background: none;
+    border-color: transparent;
+    box-shadow: none;
 
-    &:hover,
-    &:focus {
-      .minimal-styles;
-    }
-  }
-
-  &-minimal.condo-btn-primary:not(.condo-btn-dangerous, .condo-btn-stateless),
-  &-minimal.condo-btn-secondary:not(.condo-btn-dangerous, .condo-btn-stateless),
-  &-minimal.condo-btn-accent:not(.condo-btn-dangerous, .condo-btn-stateless) {
     &::before {
-      .condo-btn-layer(0);
-
-      background: @condo-global-color-brand-gradient-1;
-      opacity: 0;
-      transition: opacity @condo-global-transition-duration-default ease-in-out;
-    }
-
-    &:hover:not(:disabled) {
-      .condo-btn-static-text-color(@condo-global-color-green-5);
-      .condo-btn-content-color(@condo-global-color-green-5);
-    }
-
-    &:active:not(:disabled) {
-      .condo-btn-static-text-color(@condo-global-color-green-7);
-      .condo-btn-content-color(@condo-global-color-green-7);
-    }
-
-    &:hover:not(:disabled, .condo-btn-compact)::before {
-      opacity: 1;
+      display: none;
     }
   }
 
-  &-minimal.condo-btn-compact.condo-btn-primary,
-  &-minimal.condo-btn-compact.condo-btn-secondary,
-  &-minimal.condo-btn-compact.condo-btn-accent,
-  &-minimal.condo-btn-compact.condo-btn-primary.condo-btn-dangerous,
-  &-minimal.condo-btn-compact.condo-btn-secondary.condo-btn-dangerous,
-  &-minimal.condo-btn-compact.condo-btn-accent.condo-btn-dangerous {
+  &-minimal.condo-btn-compact {
     padding: 0;
-    border: none;
+  }
 
-    &:disabled {
-      border: none;
-    }
+  span {
+    position: relative;
+    z-index: 1;
+  }
+
+  span + span {
+    margin-left: @condo-button-gap;
   }
 
   // After layer is used to show gradient outline on tab-focusing
@@ -204,6 +129,13 @@
   &-primary:focus::after,
   &-primary.condo-btn-focus::after {
     .condo-btn-layer(-@condo-button-focus-outline-width);
+
+    border-radius: @condo-button-border-radius + @condo-button-focus-outline-width;
+  }
+
+  &-secondary:focus::after,
+  &-secondary.condo-btn-focus::after {
+    .condo-btn-layer(-(@condo-button-focus-outline-width + @condo-button-border-width));
 
     border-radius: @condo-button-border-radius + @condo-button-focus-outline-width;
   }
@@ -243,12 +175,17 @@
       background: @condo-global-color-black;
 
       &::before {
-        background: @condo-global-color-brand-gradient-7;
+        opacity: 0.9;
       }
     }
 
     &.condo-btn-minimal {
       .condo-btn-content-color(@condo-global-color-black);
+
+      &:hover {
+        .condo-btn-static-text-color(@condo-global-color-green-5);
+        .condo-btn-content-color(@condo-global-color-green-5);
+      }
     }
 
     &.condo-btn-stateless {
@@ -290,12 +227,7 @@
           .condo-btn-static-text-color(@condo-global-color-red-7);
         }
 
-        &:active {
-          .condo-btn-content-color(@condo-global-color-red-5);
-          .condo-btn-static-text-color(@condo-global-color-red-5);
-        }
-
-        &:not(:disabled).condo-btn-stateless {
+        &.condo-btn-stateless {
           &:focus,
           &-focus,
           &:hover,
@@ -303,11 +235,6 @@
             .condo-btn-content-color(@condo-global-color-red-5);
             .condo-btn-static-text-color(@condo-global-color-red-5);
           }
-        }
-
-        &:disabled {
-          .condo-btn-content-color(@condo-global-color-black);
-          .condo-btn-static-text-color(@condo-global-color-black);
         }
       }
 
@@ -338,17 +265,9 @@
       background: @condo-global-color-black;
       opacity: @condo-global-opacity-disabled;
 
-      &.condo-btn-minimal {
-        .minimal-styles;
-      }
-
       &::before {
         opacity: 0;
       }
-    }
-
-    &.condo-btn-dangerous.condo-btn-minimal:hover:not(.condo-btn-compact, :disabled, .condo-btn-stateless) {
-      background: @condo-global-color-red-1;
     }
   }
 
@@ -358,40 +277,8 @@
     transition: background-color @condo-global-transition-duration-default ease-in-out;
     .condo-btn-content-color(@condo-global-color-black);
 
-    &::after {
-      .condo-btn-layer(-@condo-button-border-width);
-
-      box-sizing: border-box;
-      background: @condo-global-color-brand-gradient-5 border-box;
-      border: @condo-button-border-width solid transparent;
-      opacity: 0;
-      transition: opacity @condo-global-transition-duration-default ease-out;
-      mask: linear-gradient(#111 0 0) padding-box, linear-gradient(#fff 0 0);
-      -webkit-mask-composite: xor;
-      mask-composite: exclude;
-    }
-
-    &.condo-btn-focus::after,
-    &:focus-visible::after {
-      .condo-btn-layer(-(@condo-button-focus-outline-width + @condo-button-border-width));
-
-      border: @condo-button-focus-outline-width solid transparent;
-      border-radius: @condo-button-border-radius + @condo-button-focus-outline-width;
-      opacity: 1;
-    }
-
-    &:focus::after,
-    &-focus::after {
-      background: @condo-global-color-brand-gradient-5 border-box;
-    }
-
-    &:hover::after {
-      background: @condo-global-color-brand-gradient-5 border-box;
-      opacity: 1;
-    }
-
-    &:active::after {
-      background: @condo-global-color-brand-gradient-7 border-box;
+    &.condo-btn-minimal {
+      .condo-btn-content-color(@condo-global-color-gray-7);
     }
 
     & > .condo-btn-text {
@@ -419,20 +306,7 @@
       .condo-btn-content-color(@condo-global-color-red-5);
       .condo-btn-static-text-color(@condo-global-color-red-5);
 
-      &::after {
-        opacity: 0;
-      }
-
-      &:focus-visible::after,
-      &.condo-btn-focus::after {
-        opacity: 1;
-      }
-
       border: @condo-button-border-width solid @condo-global-color-red-5;
-
-      .condo-btn-minimal {
-        border: none;
-      }
 
       &:hover {
         background: @condo-global-color-red-1;
@@ -479,6 +353,36 @@
       }
     }
 
+    // Used button before element for gradient border with radius
+    &::before {
+      .condo-btn-layer(-@condo-button-border-width);
+
+      box-sizing: border-box;
+      background: @condo-global-color-brand-gradient-5 border-box;
+      border: @condo-button-border-width solid transparent;
+      opacity: 0;
+      transition: opacity @condo-global-transition-duration-default ease-out;
+      mask: linear-gradient(#111 0 0) padding-box, linear-gradient(#fff 0 0);
+      -webkit-mask-composite: xor;
+      mask-composite: exclude;
+    }
+
+    &::before,
+    &:focus::before,
+    &-focus::before {
+      background: @condo-global-color-brand-gradient-5 border-box;
+    }
+
+    &:hover::before {
+      background: @condo-global-color-brand-gradient-5 border-box;
+      opacity: 1;
+    }
+
+    &:active::before {
+      background: @condo-global-color-brand-gradient-5 border-box;
+      opacity: 0.9;
+    }
+
     &:disabled {
       background: transparent;
       border: @condo-button-border-width solid @condo-global-color-gray-7;
@@ -487,35 +391,22 @@
       .condo-btn-content-color(@condo-global-color-black);
       .condo-btn-static-text-color(@condo-global-color-black);
 
-      &::after {
+      &::before {
         opacity: 0;
       }
-
-      &.condo-btn-minimal {
-        .minimal-styles;
-
-        .condo-btn-content-color(@condo-global-color-black);
-        .condo-btn-static-text-color(@condo-global-color-black);
-      }
     }
 
-    &.condo-btn-minimal:not(.condo-btn-dangerous, :disabled) {
-      .condo-btn-static-text-color(@condo-global-color-gray-7);
-      .condo-btn-content-color(@condo-global-color-gray-7);
-    }
-
-    &.condo-btn-stateless:not(:disabled) {
+    &.condo-btn-stateless {
       &:not(.condo-btn-dangerous) {
         .condo-btn-content-color(@condo-global-color-black);
       }
 
       &.condo-btn-minimal:not(.condo-btn-dangerous) {
-        &,
-        &:active,
-        &:hover {
-          .condo-btn-static-text-color(@condo-global-color-gray-7);
-          .condo-btn-content-color(@condo-global-color-gray-7);
-        }
+        .condo-btn-content-color(@condo-global-color-gray-7);
+      }
+
+      &.condo-btn-minimal:not(.condo-btn-dangerous):hover {
+        .condo-btn-content-color(@condo-global-color-gray-7);
       }
 
       &:hover,
@@ -523,12 +414,10 @@
         background: transparent;
       }
 
-      &:not(.condo-btn-dangerous, .condo-btn-minimal):hover {
+      &:not(.condo-btn-dangerous):hover {
         border: @condo-button-border-width solid @condo-global-color-gray-7;
       }
 
-      &:hover::after,
-      &:active::after,
       &:hover::before,
       &:active::before {
         opacity: 0;
@@ -551,20 +440,9 @@
       .condo-btn-content-color(@condo-global-color-black);
       .condo-btn-static-text-color(@condo-global-color-black);
 
-      &::after {
+      &::before {
         opacity: 0;
       }
-
-      &.condo-btn-minimal {
-        .minimal-styles;
-
-        .condo-btn-content-color(@condo-global-color-black);
-        .condo-btn-static-text-color(@condo-global-color-black);
-      }
-    }
-
-    &.condo-btn-dangerous.condo-btn-minimal:hover:not(.condo-btn-compact, :disabled, .condo-btn-stateless) {
-      background: @condo-global-color-red-1;
     }
   }
 
@@ -588,7 +466,6 @@
     &:focus,
     &-focus {
       background: transparent;
-      border-color: transparent;
     }
 
     &:hover {
@@ -605,7 +482,7 @@
       .condo-btn-content-color(@condo-global-color-white);
 
       &::before {
-        background: @condo-global-color-brand-gradient-7;
+        opacity: 0.9;
       }
     }
 
@@ -635,13 +512,12 @@
       mask-composite: exclude;
     }
 
-    &.condo-btn-focus::after,
-    &:focus-visible::after {
-      .condo-btn-layer(-(@condo-button-focus-outline-width + @condo-button-border-width));
+    &:focus-visible {
+      &::after {
+        .condo-btn-layer(-(@condo-button-focus-outline-width + @condo-button-border-width));
 
-      border: @condo-button-focus-outline-width solid transparent;
-      border-radius: @condo-button-border-radius + @condo-button-focus-outline-width;
-      opacity: 1;
+        opacity: 1;
+      }
     }
 
     &.condo-btn-dangerous {
@@ -657,7 +533,7 @@
       }
 
       &:focus-visible::after,
-      &.condo-btn-focus::after {
+      &-focus::after {
         opacity: 1;
       }
 
@@ -719,13 +595,9 @@
       &::after {
         opacity: 0;
       }
-
-      &.condo-btn-minimal {
-        .minimal-styles;
-      }
     }
 
-    &.condo-btn-stateless:not(:disabled) {
+    &.condo-btn-stateless {
       &:not(.condo-btn-dangerous) {
         .condo-btn-content-color(@condo-global-color-green-5);
       }
@@ -760,14 +632,6 @@
       &::before {
         opacity: 0;
       }
-
-      &.condo-btn-minimal {
-        .minimal-styles;
-      }
-    }
-
-    &.condo-btn-dangerous.condo-btn-minimal:hover:not(.condo-btn-compact, :disabled, .condo-btn-stateless) {
-      background: @condo-global-color-red-1;
     }
   }
 
@@ -777,51 +641,12 @@
 }
 
 a.condo-btn {
-  &-medium.condo-btn-primary {
-    .condo-btn-href(@condo-button-line-height-medium, @condo-button-padding-height-medium,
-    @condo-button-padding-hor-medium, 0);
+  &-primary {
+    .condo-btn-href(@condo-button-line-height-l, @condo-button-padding-vert-l, @condo-button-padding-hor-l, 0);
   }
 
-  &-medium.condo-btn-secondary,
-  &-medium.condo-btn-accent {
-    .condo-btn-href(@condo-button-line-height-medium, @condo-button-padding-height-medium,
-    @condo-button-padding-hor-medium, @condo-button-border-width);
-  }
-
-  &-large.condo-btn-primary {
-    .condo-btn-href(@condo-button-line-height-large, @condo-button-padding-height-large,
-    @condo-button-padding-hor-large, 0);
-  }
-
-  &-large.condo-btn-secondary,
-  &-large.condo-btn-accent {
-    .condo-btn-href(@condo-button-line-height-large, @condo-button-padding-height-large,
-    @condo-button-padding-hor-large, @condo-button-border-width);
-  }
-
-  &-medium.condo-btn-compact.condo-btn-primary {
-    min-width: 0;
-    .condo-btn-href(@condo-button-line-height-medium, @condo-button-padding-height-medium-compact,
-    @condo-button-padding-hor-compact, 0);
-  }
-
-  &-medium.condo-btn-compact.condo-btn-secondary,
-  &-medium.condo-btn-compact.condo-btn-accent {
-    min-width: 0;
-    .condo-btn-href(@condo-button-line-height-medium, @condo-button-padding-height-medium-compact,
-    @condo-button-padding-hor-compact, @condo-button-border-width);
-  }
-
-  &-large.condo-btn-compact.condo-btn-primary {
-    min-width: 0;
-    .condo-btn-href(@condo-button-line-height-large, @condo-button-padding-height-large-compact,
-    @condo-button-padding-hor-compact, 0);
-  }
-
-  &-large.condo-btn-compact.condo-btn-secondary,
-  &-large.condo-btn-compact.condo-btn-accent {
-    min-width: 0;
-    .condo-btn-href(@condo-button-line-height-large, @condo-button-padding-height-large-compact,
-    @condo-button-padding-hor-compact, @condo-button-border-width);
+  &-secondary {
+    .condo-btn-href(@condo-button-line-height-l, @condo-button-padding-vert-l, @condo-button-padding-hor-l,
+    @condo-button-border-width);
   }
 }
